# AH_03_08

./: .gitignore  docker-compose.yml  pyproject.toml
ai_worker/: Dockerfile  main.py
ai_worker/core/: __init__.py  config.py
ai_worker/schemas/: ai.py
ai_worker/tasks/: ai_tasks.py  tts_task.py
app/: Dockerfile
app/apis/: __init__.py
app/apis/v1/: __init__.py  ai_routers.py  guide_routers.py  health_routers.py  tts_routers.py
app/core/db/: databases.py
app/core/db/migrations/models/: 2_20260515064752_rename_and_add_tables.py  3_20260515080129_add_chat_tables.py  4_20260515080236_add_user_health_info.py  5_20260515080730_add_middle_priority_tables.py  6_20260515081121_add_log_tables.py
app/dtos/: base.py  health.py  tts.py
app/models/: __init__.py  access_logs.py  allergies.py  audit_logs.py  calendar_events.py  chat_messages.py  chat_sessions.py  error_logs.py  feedback_tags.py  feedbacks.py  guide.py  guide_assets.py  guides.py  medical_records.py  medications.py  model_metrics.py  notifications.py  underlying_diseases.py  users.py
app/repositories/: health_repository.py
app/services/: ai_service.py  health.py  tts.py
envs/: example.local.env  example.prod.env
